Wrong visibility for bundled fonts with font-list.shared true on Linux
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
People
(Reporter: pierov, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Bug 1745715 regresses when gfx.e10s.font-list.shared is set to true.
So, if a font is available both as system font and as bundled font, its visibility is wrong and it is not rendered on Ubuntu and Fedora.
When I flip gfx.e10s.font-list.shared back to false, everything works as expected again.
Steps to reproduce:
- Install a system font that isn't normally installed in Ubuntu/Fedora
- Copy the same font to the
fontsdirectory - Enable RFP on your profile and make sure
gfx.e10s.font-list.sharedistrue - Go to any website, and set the font you chose as a
font-familywith the inspector: it will be rendered as the default font-family (e.g.,serif) - Set
gfx.e10s.font-list.sharedtofalseand restart Firefox - Repeat 4 again: this time the font will be rendered (which is the expected behavior)
Comment 1•3 years ago
|
||
The severity field is not set for this bug.
:alaskanemily, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1745715
Updated•3 years ago
|
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1745715
Updated•3 years ago
|
| Assignee | ||
Comment 4•3 years ago
|
||
| Assignee | ||
Comment 5•3 years ago
|
||
I think this should simply be a question of initialization order.
@pierov, could you try the attached patch and confirm whether it fixes the behavior for you? Thanks! If so, I'll tag it for review.
Updated•3 years ago
|
| Assignee | ||
Comment 6•3 years ago
|
||
OK, I tested this on my Ubuntu machine and confirmed that it makes the font visible, as expected. (Additional testing welcome, but I'm going to go ahead and ask for review here so we can land the patch.)
Comment 8•3 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 9•3 years ago
|
||
Yes, I confirm it works, thank you!
(sorry for the delay)
Updated•3 years ago
|
Comment 10•3 years ago
|
||
The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox113towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Description
•