Bug 1792157 - Ensure correct font-visibility for bundled fonts on Linux when they 'shadow' system-installed families. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D175350